unpackaged/main/default/objects/ProgramApi__Requirement__c/ProgramApi__Requirement__c.object-meta.xml
<CustomObject>
    <description>This object retains the compulsory tasks necessary to meet fixed regulations or level of achievement.</description>
    <label>Requirement</label>
    <nameField>
        <displayFormat>RN-{00000}</displayFormat>
        <label>Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>