unpackaged/main/default/objects/ProgramApi__Requirement__c/fields/ProgramApi__Dependency__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Dependency__c</fullName>
    <description>(optional) Comma separated list of requirement(s) (autonumber) that must be completed to activate to enable this requirement</description>
    <inlineHelpText>(optional) Comma separated list of requirement(s) (autonumber) that must be completed to activate to enable this requirement</inlineHelpText>
    <label>Dependency</label>
    <type>TextArea</type>
</CustomField>