unpackaged/main/default/objects/ProgramApi__Requirement__c/fields/ProgramApi__Display_Order__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Display_Order__c</fullName>
    <description>Identifies the order the requirement is listed on Program page</description>
    <inlineHelpText>Identifies the order the requirement is listed on Program page</inlineHelpText>
    <label>Display Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>