unpackaged/main/default/objects/ProgramApi__Requirement__c/fields/ProgramApi__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__End_Date__c</fullName>
    <description>Optional effective end date of requirement</description>
    <inlineHelpText>Optional effective end date of requirement</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>