unpackaged/main/default/objects/ProgramApi__Requirement__c/fields/ProgramApi__Goal_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Goal_Button_Label__c</fullName>
    <defaultValue>&#39;Register&#39;</defaultValue>
    <description>The value in this field will be populated on the goals navigation button.</description>
    <inlineHelpText>The value in this field will be populated on the goals navigation button.</inlineHelpText>
    <label>Goal Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>