unpackaged/main/default/objects/ProgramApi__Requirement__c/fields/ProgramApi__Maintenance__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Maintenance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies maintenance requirements</description>
    <inlineHelpText>Identifies maintenance requirements</inlineHelpText>
    <label>Maintenance</label>
    <type>Checkbox</type>
</CustomField>