unpackaged/main/default/objects/ProgramApi__Requirement__c/fields/ProgramApi__Navigation_URL__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Navigation_URL__c</fullName>
    <description>Identifies URL used to direct the participant to requirement task</description>
    <inlineHelpText>Identifies URL used to direct the participant to requirement task</inlineHelpText>
    <label>Navigation URL</label>
    <type>Url</type>
</CustomField>