unpackaged/main/default/objects/ProgramApi__Requirement__c/fields/ProgramApi__Program__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Identifies the program that the requirement applies</description>
    <inlineHelpText>Identifies the program that the requirement applies</inlineHelpText>
    <label>Program</label>
    <referenceTo>ProgramApi__Program__c</referenceTo>
    <relationshipLabel>Requirements</relationshipLabel>
    <relationshipName>Requirements</relationshipName>
    <type>Lookup</type>
</CustomField>