unpackaged/main/default/objects/ProgramApi__Requirement__c/fields/ProgramApi__Published__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Published__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enables requirement to be displayed on Program page to the participant</description>
    <inlineHelpText>Enables requirement to be displayed on Program page to the participant</inlineHelpText>
    <label>Published</label>
    <type>Checkbox</type>
</CustomField>