unpackaged/main/default/objects/ProgramApi__Requirement__c/fields/ProgramApi__Requirement_Description__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Requirement_Description__c</fullName>
    <inlineHelpText>Optional requirement description</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>