unpackaged/main/default/objects/ProgramApi__Requirement__c/fields/ProgramApi__Requirement_Name__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Requirement_Name__c</fullName>
    <description>Name of the requirement that will be displayed to participants</description>
    <inlineHelpText>Name of the requirement that will be displayed to participants</inlineHelpText>
    <label>Requirement Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>