unpackaged/main/default/objects/ProgramApi__Requirement__c/fields/ProgramApi__Requirement_Type__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Requirement_Type__c</fullName>
    <description>Identifies the requirement type</description>
    <inlineHelpText>Identifies the requirement type</inlineHelpText>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEUs</fullName>
            </value>
            <value>
                <fullName>File Upload</fullName>
            </value>
            <value>
                <fullName>Exam</fullName>
            </value>
            <value>
                <fullName>Course</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Reference Attestation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>