unpackaged/main/default/objects/ProgramApi__Requirement__c/fields/ProgramApi__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ProgramApi__Start_Date__c</fullName>
    <description>Optional effective start date of requirement</description>
    <inlineHelpText>Optional effective start date of requirement</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>