unpackaged/main/default/objects/ProgramApi__Requirement__c/listViews/ProgramApi__All.listView-meta.xml
<ListView>
    <fullName>ProgramApi__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>